Fixing the JavaScript library.

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,9 +1,19 @@
 {
   "name": "@meiteimayek/mapping",
-  "version": "v0.0.1-beta",
+  "version": "v0.0.1-beta0",
   "description": "Utility Functions for managing Meitei Mayek Characters and mapping to E-pao Font.",
+  "homepage": "https://github.com/GyanendroKh/MayekMapping/tree/master/javascript",
   "main": "mayek.js",
   "keywords": ["meiteimayek", "meitei-mayek", "mapping", "utility", "manipuri"],
-  "author": "khgyanendro77@gmail.com",
+  "author": {
+    "name": "Gyanendro Kh",
+    "email": "khgyanendro77@gmail.com",
+    "url": "https://gyanendrokh.github.io"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/GyanendroKh/MayekMapping.git",
+    "directory": "javascript/"
+  },
   "license": "Apache-2.0"
 }
